[package]
name = "subdash"
version = "0.1.0"
authors = ["LJason <ljason@ljason.cn>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/LJason77/Subdash.git"

[lib]
name = "subdash"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
